@@ -2,6 +2,12 @@
 
 	* gettext-0.14.3 released.
 
+2004-09-12  Bruno Haible  <bruno@clisp.org>
+
+	* hash.c: Include <limits.h> instead of <values.h>.
+	Assume an ANSI C implementation with stdlib.h, string.h.
+	(BITSPERBYTE, LONGBITS, bcopy): Remove macros.
+
 2005-02-24  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.2 released.
